[package]
name = "websmq-server-rs"
version = "0.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
tokio-tungstenite = "0.14.0"
futures-util = "0.3.13"
tokio = {version="1.4.0", features=["net", "sync", "rt", "rt-multi-thread", "macros", "io-std"]}
log = "0.4.14"
env_logger = "0.8.3"
